--- a/esoSampleProject/Dockerfile
+++ b/esoSampleProject/Dockerfile
@@ -26,6 +26,10 @@
 
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine as build
+
+EXPOSE 8080
+ENV ASPNETCORE_URLS=http://*:8080
+
 WORKDIR /app
 COPY . .
 RUN dotnet restore
