--- a/esoSampleProject/Dockerfile
+++ b/esoSampleProject/Dockerfile
@@ -25,16 +25,22 @@
 #ENTRYPOINT ["dotnet", "esoSampleProject.dll"]
 #
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS build
-EXPOSE 8080
-ENV ASPNETCORE_URLS=http://*:8080
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
+WORKDIR /App
 
-WORKDIR /app
-COPY . .
+
+# Copy everything
+COPY . ./
+# Restore as distinct layers
 RUN dotnet restore
-RUN dotnet publish -o /app/published-app
+# Build and publish a release
+RUN dotnet publish -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /app
-COPY --from=build /app/published-app /app
-ENTRYPOINT [ "dotnet", "/app/esoSampleProject.dll" ]
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
+WORKDIR /App
+EXPOSE 5000
+ENV ASPNETCORE_URLS=http://+:5000
+
+COPY --from=build-env /App/out .
+ENTRYPOINT ["dotnet", "esoSampleProject.dll"]
